hphp/hack/test/typecheck/typing_fail_duck.php.exp
File "typing_fail_duck.php", line 37, characters 21-34:
Invalid argument (Typing[4110])
File "typing_fail_duck.php", line 32, characters 15-24:
Expected DoesRender
File "typing_fail_duck.php", line 37, characters 25-32:
But got MyClass1
